# Fraud-Doc-EndtoEnd

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/results/: pipeline_train.json
models/train/: train_fraud.py
scripts/: analyze_ocr_accuracy.py  download_models.py  download_paddle.py  process_dataset.py  simulate_fraud.py  test_dual_ocr.py  test_llm_analyzer.py  test_ocr_single.py  test_paddle_mrz.py
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py
src/api/routes/: analyze.py  cases.py  feedback.py
src/api/schemas/: requests.py  responses.py
src/config/: __init__.py  settings.py
src/core/: __init__.py
src/core/entities/: __init__.py  analysis_result.py  document.py
src/core/interfaces/: __init__.py  embedding_service.py  fraud_classifier.py  ocr_engine.py  quality_gate.py  rules_engine.py  storage_service.py
src/core/use_cases/: __init__.py  analyze_document.py  search_similar.py  submit_feedback.py
src/infrastructure/: __init__.py
src/infrastructure/data/: __init__.py  coco_loader.py
src/infrastructure/db/: __init__.py  connection.py  database.py  models.py  repository.py
src/infrastructure/embeddings/: __init__.py  gemini_embeddings.py  pgvector_service.py
src/infrastructure/fraud/: __init__.py  efficientnet_classifier.py
src/pipeline/: __init__.py  orchestrator.py
static/: app.js  index.html  style.css
tests/integration/: test_api.py
tests/unit/: test_quality_gate.py  test_rules_engine.py  test_schemas.py
(+16 files in other folders)
