[project]
name = "fraud-doc-pipeline"
version = "0.1.0"
description = "Pipeline end-to-end de validação e prevenção de fraudes em documentos"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "opencv-python-headless>=4.10.0",
    "paddlepaddle>=2.6.0",
    "paddleocr>=2.9.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"
